--- a/index.html
+++ b/index.html
@@ -7,10 +7,18 @@
     <link href="style.css" rel="stylesheet" >
 </head>
 <body>
+
+    <!-- Title -->
     <div id="title"> 
         <h1>
             Animal Gallery
         </h1>
     </div>
+
+    <!-- Cover image -->
+    <div2 id="cover-image">
+        <img id="cov-img" src="/Images/cover image.jpg">
+    </div2>
+    
 </body>
 </html>
