--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     </div>
 
     <!-- Cover image -->
-    <div2 id="cover-image">
+    <div id="cover-image">
         <img id="cov-img" src="/Images/cover image.jpg">
-    </div2>
-    
+    </div>
+
 </body>
 </html>
