--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     </div>
 
     <!-- Cover image -->
-    <div id="cover-image">
-        <img id="cov-img" src="/Images/cover image.jpg">
+    <div id="cover-div">
+        <img id="cov-img" src="/Images/cover image.jpg" alt="Cover image displaying two baby pandas laying on the floor">
     </div>
 
 </body>
