remove repeating code with classes

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
 
     <!-- Title -->
-    <div id="title"> 
+    <div id="title-div" class="flex-center"> 
         <h1>
             Animal Gallery
         </h1>
     </div>
 
     <!-- Cover image -->
-    <div id="cover-div">
+    <div id="cover-div" class="flex-center">
         <img id="cov-img" src="/Images/cover image.jpg" alt="Cover image displaying two baby pandas laying on the floor">
     </div>
 
