--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- Links style sheet -->
     <link href="style.css" rel="stylesheet" >
 </head>
 <body>
@@ -18,6 +19,29 @@
     <!-- Cover image -->
     <div id="cover-div" class="flex-center full-width">
         <img id="cov-img" src="/Images/cover image.jpg" alt="Cover image displaying two baby pandas laying on the floor">
+    </div>
+
+    <div class="full-width" id="grid-images">
+        <!-- Moo Deng Hippo -->
+        <div>
+            <img src="/Images/Moo_Deng_Hippo.jpg">
+            <p>Moo Deng the baby Hippo</p>
+        </div>
+        <!-- Pesto the penguin -->
+        <div>
+            <img src="/Images/Pesto_penguin.png">
+            <p>Pesto the giant baby penguin</p>
+        </div>
+        <!-- Biscuit the seal -->
+        <div>
+            <img src="/Images/Biscuit_seal.jpg">
+            <p>Biscuit the baby seal</p>
+        </div>
+        <!-- Hua Hua the panda -->
+        <div>
+            <img src="/Images/Hua_Hua_panda.webp">
+            <p>Hua Hua the famous baby panda</p>
+        </div>
     </div>
 
 </body>
