style for images

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <img id="cov-img" src="/Images/cover image.jpg" alt="Cover image displaying two baby pandas laying on the floor">
     </div>
 
-    <div class="full-width" id="grid-images">
+    <div class="full-width flex-center" id="grid-images">
         <!-- Moo Deng Hippo -->
         <div>
             <img src="/Images/Moo_Deng_Hippo.jpg">
@@ -29,7 +29,7 @@
         </div>
         <!-- Pesto the penguin -->
         <div>
-            <img src="/Images/Pesto_penguin.png">
+            <img src="/Images/Pesto_penguin.png" width="600px" height="817px">
             <p>Pesto the giant baby penguin</p>
         </div>
         <!-- Biscuit the seal -->
