--- a/index.html
+++ b/index.html
@@ -16,29 +16,32 @@
         </h1>
     </div>
 
+
     <!-- Cover image -->
     <div id="cover-div" class="flex-center full-width">
         <img id="cov-img" src="/Images/cover image.jpg" alt="Cover image displaying two baby pandas laying on the floor">
     </div>
 
-    <div class="full-width flex-center" id="grid-images">
+
+    <!-- Image gallery -->
+    <div class="full-width flex-center" id="gallery">
         <!-- Moo Deng Hippo -->
-        <div>
-            <img src="/Images/Moo_Deng_Hippo.jpg">
+        <div class="flex-center flex-col card">
+            <img src="/Images/Moo_Deng_Hippo.jpg" alt="A baby hippo with its mouth open">
             <p>Moo Deng the baby Hippo</p>
         </div>
         <!-- Pesto the penguin -->
-        <div>
-            <img src="/Images/Pesto_penguin.png" width="600px" height="817px">
+        <div class="flex-center flex-col card">
+            <img src="/Images/Pesto_penguin.png" alt="A baby pengiun with black fur that is the same size as a regular penguin" width="600px" height="817px">
             <p>Pesto the giant baby penguin</p>
         </div>
         <!-- Biscuit the seal -->
-        <div>
+        <div class="flex-center flex-col card">
             <img src="/Images/Biscuit_seal.jpg">
             <p>Biscuit the baby seal</p>
         </div>
         <!-- Hua Hua the panda -->
-        <div>
+        <div class="flex-center flex-col card">
             <img src="/Images/Hua_Hua_panda.webp">
             <p>Hua Hua the famous baby panda</p>
         </div>
