--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
     <!-- Image gallery -->
-    <div class="full-width flex-center" id="gallery">
+    <div class="full-width" id="gallery">
         <!-- Moo Deng Hippo -->
         <div class="flex-center flex-col card">
             <img src="/Images/Moo_Deng_Hippo.jpg" alt="A baby hippo with its mouth open">
@@ -32,8 +32,8 @@
         </div>
         <!-- Pesto the penguin -->
         <div class="flex-center flex-col card">
-            <img src="/Images/Pesto_penguin.png" alt="A baby pengiun with black fur that is the same size as a regular penguin" width="600px" height="817px">
-            <p>Pesto the giant baby penguin</p>
+            <img src="/Images/Pesto_penguin.jpg" alt="A baby pengiun with black fur that is the same size as a regular penguin" width="600px" height="817px">
+            <p>Pesto the baby penguin</p>
         </div>
         <!-- Biscuit the seal -->
         <div class="flex-center flex-col card">
@@ -43,7 +43,7 @@
         <!-- Hua Hua the panda -->
         <div class="flex-center flex-col card">
             <img src="/Images/Hua_Hua_panda.webp">
-            <p>Hua Hua the famous baby panda</p>
+            <p>Hua Hua the baby panda</p>
         </div>
     </div>
 
