--- a/index.html
+++ b/index.html
@@ -19,33 +19,39 @@
 
     <!-- Cover image -->
     <div id="cover-div" class="flex-center full-width">
-        <img id="cov-img" src="/Images/cover image.jpg" alt="Cover image displaying two baby pandas laying on the floor">
+        <img id="cover-img" src="/Images/cover image.jpg" alt="Cover image displaying two baby pandas laying on the floor">
     </div>
 
 
     <!-- Image gallery -->
     <div class="full-width" id="gallery">
-        <!-- Moo Deng Hippo -->
+
+        <!-- Moo Deng the hippo -->
         <div class="flex-center flex-col card">
             <img src="/Images/Moo_Deng_Hippo.jpg" alt="A baby hippo with its mouth open">
             <p>Moo Deng the baby Hippo</p>
         </div>
+
         <!-- Pesto the penguin -->
         <div class="flex-center flex-col card">
             <img src="/Images/Pesto_penguin.jpg" alt="A baby pengiun with black fur that is the same size as a regular penguin" width="600px" height="817px">
             <p>Pesto the baby penguin</p>
         </div>
+
         <!-- Biscuit the seal -->
         <div class="flex-center flex-col card">
             <img src="/Images/Biscuit_seal.jpg">
             <p>Biscuit the baby seal</p>
         </div>
+
         <!-- Hua Hua the panda -->
         <div class="flex-center flex-col card">
             <img src="/Images/Hua_Hua_panda.webp">
             <p>Hua Hua the baby panda</p>
         </div>
+
     </div>
+
 
 </body>
 </html>
