posiiton of images

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Links style sheet -->
     <link href="style.css" rel="stylesheet" >
 </head>
-<body>
+<body class="flex-center flex-col">
 
     <!-- Title -->
     <div id="title-div" class="flex-center full-width"> 
@@ -24,28 +24,28 @@
 
 
     <!-- Image gallery -->
-    <div class="full-width" id="gallery">
+    <div id="gallery-div" class="full-width">
 
         <!-- Moo Deng the hippo -->
-        <div class="flex-center flex-col card">
+        <div id="item1" class="flex-center flex-col card">
             <img src="/Images/Moo_Deng_Hippo.jpg" alt="A baby hippo with its mouth open">
             <p>Moo Deng the baby Hippo</p>
         </div>
 
         <!-- Pesto the penguin -->
-        <div class="flex-center flex-col card">
+        <div id="item2" class="flex-center flex-col card">
             <img src="/Images/Pesto_penguin.jpg" alt="A baby pengiun with black fur that is the same size as a regular penguin" width="600px" height="817px">
             <p>Pesto the baby penguin</p>
         </div>
 
         <!-- Biscuit the seal -->
-        <div class="flex-center flex-col card">
+        <div id="item3" class="flex-center flex-col card">
             <img src="/Images/Biscuit_seal.jpg">
             <p>Biscuit the baby seal</p>
         </div>
 
         <!-- Hua Hua the panda -->
-        <div class="flex-center flex-col card">
+        <div id="item4" class="flex-center flex-col card">
             <img src="/Images/Hua_Hua_panda.webp">
             <p>Hua Hua the baby panda</p>
         </div>
