--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <!-- Links style sheet -->
-    <link href="style.css" rel="stylesheet" >
+    <link href="style.css" rel="stylesheet">
 </head>
+
 <body class="flex-center flex-col">
 
     <!-- Title -->
-    <div id="title-div" class="flex-center full-width"> 
+    <div id="title-div" class="flex-center full-width">
         <h1>
             Animal Gallery
         </h1>
@@ -19,7 +21,8 @@
 
     <!-- Cover image -->
     <div id="cover-div" class="flex-center full-width">
-        <img id="cover-img" src="/Images/cover image.jpg" alt="Cover image displaying two baby pandas laying on the floor">
+        <img id="cover-img" src="/Images/cover image.jpg"
+            alt="Cover image displaying two baby pandas laying on the floor">
     </div>
 
 
@@ -28,25 +31,27 @@
 
         <!-- Moo Deng the hippo -->
         <div id="item1" class="flex-center flex-col card">
-            <img src="/Images/Moo_Deng_Hippo.jpg" alt="A baby hippo with its mouth open">
+            <img src="/Images/Gallery_Images/Moo_Deng_Hippo.jpg" alt="A baby hippo with its mouth open">
             <p>Moo Deng the baby Hippo</p>
         </div>
 
         <!-- Pesto the penguin -->
         <div id="item2" class="flex-center flex-col card">
-            <img src="/Images/Pesto_penguin.jpg" alt="A baby pengiun with black fur that is the same size as a regular penguin" width="600px" height="817px">
+            <img src="/Images/Gallery_Images/Pesto_penguin.jpg"
+                alt="A baby pengiun with black fur that is the same size as a regular penguin" width="600px"
+                height="817px">
             <p>Pesto the baby penguin</p>
         </div>
 
         <!-- Biscuit the seal -->
         <div id="item3" class="flex-center flex-col card">
-            <img src="/Images/Biscuit_seal.jpg">
+            <img src="/Images/Gallery_Images/Biscuit_seal.jpg">
             <p>Biscuit the baby seal</p>
         </div>
 
         <!-- Hua Hua the panda -->
         <div id="item4" class="flex-center flex-col card">
-            <img src="/Images/Hua_Hua_panda.webp">
+            <img src="/Images/Gallery_Images/Hua_Hua_panda.webp">
             <p>Hua Hua the baby panda</p>
         </div>
 
@@ -54,4 +59,5 @@
 
 
 </body>
+
 </html>
